More code samples for practicing using selenium, git and property files